# GCIP-Architecture

./: .gitignore  0. PROJECT_CONTEXT.md  1. VISION.md  10. LOSS_MODEL.md  10. TECH_STACK_AND_ROADMAP.md  11. PRICING_MODEL.md  12. STRATEGIC_REVIEW.md  13. PRODUCT_POSITIONING.md  14. SECURITY_COMPLIANCE.md  15. INTEGRATION_MAP.md  16. NOTIFICATION_STRATEGY.md  17. WORKFLOWS.md  18. DECISION_FRAMEWORK.md  19. AGENTS.md  2. PROBLEMS.md  20. DATA_MODEL.md  21. ORCHESTRATOR.md  22. FEEDBACK_LOOP.md  23. DASHBOARDS.md  24. ONBOARDING.md  25. SUCCESS_METRICS.md  27. PROJECT_STRUCTURE.md  3. RISK_TAXONOMY.md  4. ENGINEERING_KNOWLEDGE_BASE.md  5. USER_PERSONAS.md  6. COMPETITOR_ANALYSIS.md  7. ARCHITECTURE.md  7. MVP_AND_EVOLUTIONARY_ARCHITECTURE.md  8. BUSINESS_MODEL_AND_GTM.md  8. PRODUCT_PRINCIPLES.md  9. BUSINESS_VALUE.md  9. DATA_SECURITY_AND_PRIVACY.md  README.md
.agents/: AGENTS.md
backend/: .env.example  pyproject.toml  requirements.txt  test_rag.py
backend/app/: config.py  main.py
backend/app/database/: dependency.py  interfaces.py  mock_repository.py  neo4j_connection.py  neo4j_repository.py  neo4j_vector.py  redis_client.py
backend/app/middlewares/: tenant_validator.py
backend/app/models/: feedback_model.py  onboarding_model.py  rag_model.py  state_model.py
backend/app/routers/: onboarding.py  rag_router.py
backend/app/services/: embedding_service.py  rag_service.py
docker/: docker-compose.yml
